[FIX] web: grouped kanban column width on smaller screens
This commit restores the almost-full (aka. 90%) width for the grouped
kanban's column (which use .o_kanban_small_column) on smaller screens.
As a reminder, to goal of this specific size is to give as much space as
possible for the column's cards *but* also showing a hint to the
previous/next columns.

Steps to reproduce:
- Open CRM grouped kanban on a mobile-like screen size
- Columns' width is not properly set (too small)

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -472,9 +472,11 @@
         .o_kanban_record {
             width: 100%;
         }
-
-        &.o_kanban_small_column .o_kanban_group:not(.o_column_folded) {
-            flex-basis: calc(var(--KanbanRecord--small-width) + (2 * var(--KanbanGroup-padding-h)));
+        
+        @include media-breakpoint-up(md) {
+            &.o_kanban_small_column .o_kanban_group:not(.o_column_folded) {
+                flex-basis: calc(var(--KanbanRecord--small-width) + (2 * var(--KanbanGroup-padding-h)));
+            }
         }
     }
 
